force-app/main/default/objects/Brand_Connected_Vehicle__c/Brand_Connected_Vehicle__c.object-meta.xml
<CustomObject>
    <description>Brand Connected app titular registry — tracks the registered titular for a connected vehicle.</description>
    <label>Brand Connected Vehicle</label>
    <nameField>
        <label>Connected Number</label>
        <displayFormat>CON-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Connected Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>