force-app/main/default/objects/Brand_Connected_Vehicle__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Date the connected service was first activated for this vehicle.</description>
    <inlineHelpText>When connection was activated.</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>