force-app/main/default/objects/Brand_Connected_Vehicle__c/fields/Connected_Status__c.field-meta.xml
<CustomField>
    <fullName>Connected_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True when the vehicle is actively connected in the <Brand> Connected app.</description>
    <inlineHelpText>True if connection is active.</inlineHelpText>
    <label>Connected Status</label>
    <type>Checkbox</type>
</CustomField>