force-app/main/default/objects/Brand_Connected_Vehicle__c/fields/Current_Titular_DNI__c.field-meta.xml
<CustomField>
    <fullName>Current_Titular_DNI__c</fullName>
    <description>DNI (Argentine national ID) of the current titular.</description>
    <inlineHelpText>DNI in format XX.XXX.XXX.</inlineHelpText>
    <label>Current Titular DNI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>