force-app/main/default/objects/Brand_Connected_Vehicle__c/fields/Current_Titular_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Titular_Name__c</fullName>
    <description>Full name of the current titular registered in Brand Connected for this vehicle.</description>
    <inlineHelpText>Full name of the registered titular.</inlineHelpText>
    <label>Current Titular Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>