force-app/main/default/objects/Brand_Connected_Vehicle__c/fields/Linked_Email__c.field-meta.xml
<CustomField>
    <fullName>Linked_Email__c</fullName>
    <description>Email associated with the <Brand> Connected app login for this vehicle.</description>
    <inlineHelpText>Email used to log in to the Connected app.</inlineHelpText>
    <label>Linked Email</label>
    <type>Email</type>
</CustomField>