force-app/main/default/objects/Brand_Connected_Vehicle__c/fields/Patente__c.field-meta.xml
<CustomField>
    <fullName>Patente__c</fullName>
    <description>Argentine vehicle patente / license plate (e.g., "AH 830 SP"). External ID for lookups.</description>
    <externalId>true</externalId>
    <inlineHelpText>License plate of the connected vehicle.</inlineHelpText>
    <label>Patente</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>