force-app/main/default/objects/Brand_Connected_Vehicle__c/fields/Pending_Titular_Change__c.field-meta.xml
<CustomField>
    <fullName>Pending_Titular_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when a titular-change request has been submitted but not yet completed.</description>
    <inlineHelpText>Indicates a titular change is in flight.</inlineHelpText>
    <label>Pending Titular Change</label>
    <type>Checkbox</type>
</CustomField>