force-app/main/default/objects/Brand_Connected_Vehicle__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Asset (vehicle) registered in the <Brand> Connected program.</description>
    <inlineHelpText>The connected Asset record.</inlineHelpText>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Connected Vehicle Records</relationshipLabel>
    <relationshipName>Connected_Vehicle_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>